--- a/amplify/backend/auth/octank832b448d/octank832b448d-cloudformation-template.yml
+++ b/amplify/backend/auth/octank832b448d/octank832b448d-cloudformation-template.yml
@@ -9,6 +9,18 @@ Parameters:
     Type: String
 
   
+  
+  
+  functionoctank832b448dPostConfirmationArn:
+    Type: String
+    Default: functionoctank832b448dPostConfirmationArn
+  
+  functionoctank832b448dPostConfirmationName:
+    Type: String
+    Default: functionoctank832b448dPostConfirmationName
+  
+  
+  
 
     
   identityPoolName:
@@ -117,7 +129,6 @@ Parameters:
   userPoolGroupList:
     Type: CommaDelimitedList
       
-            
   serviceName:
     Type: String
   
@@ -128,6 +139,39 @@ Parameters:
             
         
   dependsOn:
+    Type: CommaDelimitedList
+      
+  
+  thirdPartyAuth:
+    Type: String
+            
+  
+  userPoolGroups:
+    Type: String
+            
+  
+  adminQueries:
+    Type: String
+            
+  triggers:
+    Type: String
+  
+            
+  
+  hostedUI:
+    Type: String
+            
+            
+      
+  parentStack:
+    Type: String
+        
+        
+  permissions:
+    Type: CommaDelimitedList
+      
+        
+  authProviders:
     Type: CommaDelimitedList
       
 Conditions:
@@ -190,6 +234,19 @@ Resources:
         
       
       
+      LambdaConfig:
+        
+        
+        
+        
+        
+          PostConfirmation: !Ref functionoctank832b448dPostConfirmationArn
+        
+        
+        
+        
+        
+      
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
@@ -211,6 +268,59 @@ Resources:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: octank832b448d_role_external_id
     
+  
+  
+  
+  
+  
+  
+  UserPoolPostConfirmationLambdaInvokePermission:
+    Type: "AWS::Lambda::Permission"
+    DependsOn: UserPool
+    Properties:
+      Action: "lambda:invokeFunction"
+      Principal: "cognito-idp.amazonaws.com"
+      FunctionName: !Ref functionoctank832b448dPostConfirmationName
+      SourceArn: !GetAtt UserPool.Arn
+  
+  
+  
+  
+  
+  # Updating lambda role with permissions to Cognito
+  
+  
+  octank832b448dPostConfirmationAddToGroupCognito:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: octank832b448dPostConfirmationAddToGroupCognito
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+            
+              - cognito-idp:AdminAddUserToGroup
+            
+              - cognito-idp:GetGroup
+            
+              - cognito-idp:CreateGroup
+            
+            
+            
+            Resource: !GetAtt
+            
+              - UserPool
+            
+              - Arn
+            
+            
+            
+
+      Roles:
+        - !Join ['',["octank832b448dPostConfirmation", '-', !Ref env]]
+  
+  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
