--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/ui-react": "^1.0.3",
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
+    "@hookform/resolvers": "^1.3.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,10 +14,12 @@
     "emotion": "^11.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "uuid": "^3.4.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
